--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-top: -20%;
   }
   
   .countdown {
@@ -118,65 +119,6 @@
       width: 90%;
       flex-wrap: wrap;
     }
-    .container__footer{
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      max-width: 1200px;
-      margin: auto;
-      margin-top: 100px;
-      background-color: #ffffff;
-  }
-  
-  .box__footer{
-      display: flex;
-     
-      padding: 30px;
-  }
-  
-  .box__footer .logo img{
-     width: 50%;
-     margin-right: 10%;
-     margin-top: 20%;
-  }
-  .footer{
-  width: 40%;
-  }
-  
-  .box__footer a{
-      margin-top: 10px;
-      color: #7a7a7a;
-      font-weight: 600;
-      text-decoration: none;
-      margin: 10px;
-  }
-  
-  
-  .box__copyright {
-      max-width: 1200px;
-      padding: 0px 40px;
-      text-align: center;
-      margin-top: 30%;
-  }
-  
-  .box__copyright p{
-      margin-top: 20px;
-      color: #8d8c8c;
-      font-size: 10px;
-  }
-  
-  .box__copyright hr{
-      border: none;
-      height: 1px;
-      background-color: #e63d3d;
-  }
-  .box__copyright img{
-    width: 10%;
-  }
-  .flores img{
-      width: 30%;
-      margin-top: -60%;
-  }
   .espero{
       font-size: 22px;
       text-align: center;
@@ -184,8 +126,6 @@
       margin: 10%;
       font-family: 'Rochester', cursive;
   }
-  
-   
   }
   
   
@@ -194,14 +134,14 @@
   
   /*SECCION*/
   .info{
-    margin-top: 10%;
+    margin-top: 5%;
     
   }
   .info h4 {
     text-align: center;
     color: #6a6a6a;
     font-size: 25px;
-    font-family: 'Rochester', cursive;
+    font-family: 'Sofia Sans Extra Condensed', sans-serif;
     
   }
   .info p{
@@ -236,10 +176,6 @@
   }
   
   
-  .boton {
-    width: 20px;
-    transition: ease 2s;
-  }
   
   
   
@@ -249,47 +185,186 @@
   
   @media (max-width: 730px) {
   
-    .container-footer {
-      margin-top: 100px;
-    }
-  
-    
-  
-    .titulo_footer{
-      color: #787676;
-      text-align: center;
-      font-size: 25px;
-      font-family: 'Rochester', cursive;
-    }
-  .confeti{
-    width: 100%;
-    margin-left: 25%;
-    margin-top: -27%;
+  .corazon{
+    width: 5%;
+    margin-left: 48%;
+    margin-top: -18%;
   }
+    
+  .box__copyright {
+    max-width: 1200px;
+    padding: 0px 40px;
+    text-align: center;
+}
+
+.box__copyright p {
+    margin-top: 20px;
+    color: #9c9b9b;
+    font-size: 10px;
+    text-align: center;
+}
+.box__copyright a {
+text-decoration: none;
+color: #9c9b9b;
+ }
   
   }
   
   @media (min-width: 1024px){ 
-  footer .information {
-    margin-top: 450px;
-    
-    font-size: 14px;
-    text-decoration: none;
-    text-align: center;
-  } 
-  
-  .sitio {
-    text-decoration: none;
-    color: #787676;
-  }
-  .span_2 {
-    text-decoration: none;
-    color: #a2e0fa;
-  }
-  .titulo_footer{
-    color: #787676;
+ 
+    .titulo_primero {
       text-align: center;
+      position: relative;
+      margin: 50px 0px;
+    
+      color: rgb(131, 130, 130);
       font-size: 30px;
-      font-family: 'Sacramento', cursive;
+      border-radius: 1px;
+      font-family: 'Rochester', cursive;
+    }
+   
+    
+    .primer_span {
+      color: #D8ADB3;
+      font-size: 110%;
+    }
+    
+   
+    
+    img {
+      width: 100%;
+      margin-right: 50px;
+      box-shadow: 0px 3px 5px rgba(rgb(218, 208, 208), rgb(38, 39, 38), brgb(65, 65, 66) alpha);
+    }
+    
+    /*CUENTA REGRESIVA*/
+    
+    .container {
+      width: 100%;
+      min-height: 50vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      margin-top: 10%;
+    }
+    
+    .countdown {
+      display: flex;
+      justify-content: space-evenly;
+      width: 50%;
+      flex-wrap: wrap;
+    }
+    
+    .countdown span {
+      color: #cfa7ac
+    }
+    
+    .countdown div {
+      display: grid;
+      place-items: center;
+      padding: 10px;
+    }
+    
+    .reloj {
+      display: grid;
+      place-items: center;
+      border: solid 1px rgb(238, 238, 205);
+      height: 100px;
+      width: 100px;
+      border-radius: 50%;
+      color: rgb(114, 114, 114);
+      font-size: 3rem;
+      font-weight: bold;
+      background-color: #effcc6;
+    }
+    
+    .final-sms {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      display: grid;
+      place-items: center;
+      transform: translateY(-100%);
+      transition: ease-in-out 0.5s;
+      background-color: rgb(112, 111, 111);
+    }
+    
+    .final-sms h2 {
+      text-align: center;
+      font-size: 100px;
+      color: rgb(251, 238, 171);
+    }
+    .info{
+      margin-top: 5%;
+      
+    }
+    .info h4 {
+      text-align: center;
+      color: #6a6a6a;
+      font-size: 30px;
+      font-family: 'Sofia Sans Extra Condensed', sans-serif;
+      
+    }
+    .info p{
+      text-align: center;
+      color: #686868;
+      font-size: 22px;
+      font-family: 'Tahoma', sans-serif;
+      
+    }
+    
+    .info img{
+      width: 10%;
+      margin-left: 40%;
+    
+    }
+    .parrafo{
+      margin: 15px;
+    }
+    
+    .click {
+      padding: 2px 10px;
+      margin-top: -20px;
+      font-size: 18px;
+      font-weight: 1200;
+      border: none;
+      color: rgb(64, 63, 63);
+      background-color: #D8ADB3;
+      border-radius: 7px;
+      box-shadow: 1px 1px 30px -5px rgb(228, 207, 248);
+      cursor: pointer;
+      margin-left: 44%;
+    }
+    .corazon{
+      width: 5%;
+      margin-left: 48%;
+      margin-top: 5%;
+       }
+    .box__copyright {
+      max-width: 1200px;
+      padding: 0px 40px;
+      text-align: center;
+  }
+  
+  .box__copyright p {
+      margin-top: 20px;
+      color: #9c9b9b;
+      font-size: 10px;
+      text-align: center;
+  }
+  .box__copyright a {
+  text-decoration: none;
+  color: #9c9b9b;
+   }
+  .espero{
+    text-align: center;
+    position: relative;
+    margin: 50px 0px;
+    color: rgb(131, 130, 130);
+    font-size: 28px;
+    font-family: 'Rochester', cursive;
   }
   }
